<resources>
    <string name="app_name">wallebi-app</string>
    <string name="base_url">https://api.wallebi.com/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="hint">hint</string>
    <string name="countries_image">countries images</string>
    <string name="send_code">Get Code</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="forget_password_question">Forget Your Password?</string>
    <string name="login">Login</string>
    <string name="sign_google">Sign In With Google</string>
    <string name="not_member">You are not a Member?</string>
    <string name="register">Register</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_code">OTP Code</string>
    <string name="code_sent_to">Code Sent to</string>
    <string name="default_timen">00:00</string>
    <string name="get_code">Get Code</string>
    <string name="confirm">Confirm</string>
    <string name="security_unavailable">Security verification unavailable?</string>
    <string name="contact_to_support">Contact To Support</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_code">Email Code</string>
    <string name="g2f_code">G2F Code</string>
    <string name="snack_title">Snack Title</string>
    <string name="lorem_epsium">Lorem epsium Lorem epsium Lorem epsium</string>
    <string name="set_password">Set Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_pass">Repeat New Password</string>
    <string name="refferal_code">Refferal Code</string>
    <string name="dont_have_reffer">Don\'t Have a Code?</string>
    <string name="ask_for_referr">Ask for a referral code</string>
    <string name="accept_wallebi">I Accept Wallebi</string>
    <string name="term_of_use">Term of Use</string>
    <string name="already_member">Already a Member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_google_up">Sign Up with Google</string>
    <string name="done">Done</string>
    <string name="welcome_to_wallebi">Welcome To Wallebi</string>
    <string name="dont_user_desc">We dont get New user Right now.</string>
    <string name="enter_email_contact">Please enter your email for contacting you</string>
    <string name="moto">In the world of crypto, Wallebi is with you!</string>
    <string name="start_now">Start Now</string>
    <string name="too_many_attemps">Too Many Attemps</string>
    <string name="dear_user">Dear User</string>
    <string name="trouble_code_support">if you have trouble getting code\n please contact support</string>
    <string name="try_more">try</string>
    <string name="test_market">BTC/IRT</string>
    <string name="test_price">31,775.0602</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="percent_20">+20%</string>
    <string name="load_data">Getting Data from Server</string>
    <string name="search_coin">Search</string>
    <string name="favorite">Favorite</string>
    <string name="spot_market">Spot Market</string>
    <string name="new_listing">New Listing</string>
    <string name="total_balance">Total Balance</string>
    <string name="loginregister">login/register</string>
    <string name="home">home</string>
    <string name="transaction">Transaction</string>
    <string name="setting">Setting</string>
    <string name="feerules"><![CDATA[Fee & Rules]]></string>
    <string name="referral">Referral</string>
    <string name="faq">FAQ</string>
    <string name="announcement">Announcement</string>
    <string name="notification">Notification</string>
    <string name="language">English</string>
    <string name="logout">Logout</string>
    <string name="choose_action">Choose Action</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="action">Action</string>
    <string name="type">Type</string>
    <string name="fiat">Fiat</string>
    <string name="choose_type">Choose Type</string>
    <string name="coin">Coin</string>
    <string name="choose_coin">Choose Coin</string>
    <string name="recepiant_address">Recepient Address</string>
    <string name="fake_address">12431_sdkf12</string>
    <string name="choose_address">Choose address or wallebi email/UID</string>
    <string name="address_hint">Address</string>
    <string name="tag_optional">Tag (optional)</string>
    <string name="next">Next</string>
    <string name="amount">Amount</string>
    <string name="fake_amount">1,255.123</string>
    <string name="bitcoin_symbol">BTC</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="available_balance">Available Balance:</string>
    <string name="minimum_ammount_error">Minimum Amount is</string>
    <string name="remained_daily_crypto">Remained Daily Crypto Withdrawal:</string>
    <string name="remained_from">/1000</string>
    <string name="increase_limnits">Increase Limits</string>
    <string name="increase_linits">Increase Limits</string>
    <string name="increase_limits">Increase Limits</string>
    <string name="nav_header_title">Header</string>
    <string name="nav_header_subtitle">Subtitle</string>
    <string name="wallebi">WALLEBI</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="residency">Residency</string>
    <string name="identification">Identification</string>
    <string name="kyc_process">KYC Process</string>
    <string name="pass_kyc_increase">Pass KYC to Increase withdraw limitation</string>
    <string name="zero">0</string>
    <string name="current_level">Current Level</string>
    <string name="level_zero">Level 0</string>
    <string name="max_withraw_limitation_per_day">Max Withdraw per day limitation:</string>
    <string name="usdt500">500 USDT</string>
    <string name="fiat_transfer_unavailable">Fiat Transfer Unavalable</string>
    <string name="next_level">Next Level</string>
    <string name="level_one">Level 1</string>
    <string name="usdt1000">10.000 USDT</string>
    <string name="max_daily_fiat">Max. Daily Fiat Withdrawals</string>
    <string name="irt300">300.000.000 IRT</string>
    <string name="start_kyc1">"Start KYC Level 1 "</string>
    <string name="residency_country">Country of Residence</string>
    <string name="enter_id">Enter ID Number</string>
    <string name="front_of_idcard">Front of ID Card</string>
    <string name="text_id_clear">. Texts and ID number Should be clear.</string>
    <string name="only_jpg_png">. Only JPG/PNG images</string>
    <string name="max_3m">. Max size: 3MB</string>
    <string name="plus_upload">+ Upload</string>
    <string name="back_of_idcard">Back of ID Card</string>
    <string name="kyc_process_finished">KYC Process is Finished!</string>
    <string name="kyc_process_finished_details">We will notif you\'r KYC state in: Setting/KYC Level.</string>
    <string name="ok">OK</string>
    <string name="kyc_process_is">You\'r KYC Process is</string>
    <string name="pending">Pending</string>
    <string name="taajob">!</string>
    <string name="operator_check_info">Operator is checking you\'r informations.</string>
    <string name="notify_soon">We will notif you soon!</string>
    <string name="trade">Trade</string>
    <string name="vip_levels">VIP Levels</string>
    <string name="improve_limit_by_vip">You can Improve you\'r Limitation by increase VIP level.</string>
    <string name="monthly_trading_volume">Your Monthly Trading Volume is</string>
    <string name="vip_zero">VIP 0</string>
    <string name="reason_vip_0"><![CDATA[Monthly Trading Volume > 0 USDT]]></string>
    <string name="maker">Maker:</string>
    <string name="maker_vip0">0.1 %</string>
    <string name="taker">Taker:</string>
    <string name="level">Level</string>
    <string name="vip_one">VIP 1</string>
    <string name="wallebi_fake">0.00</string>
    <string name="usdt">USDT</string>
    <string name="in_order_balance">In Order Balance</string>
    <string name="avialable">Available</string>
    <string name="usdt_equivalent">USDT Equivalent</string>
    <string name="buy">Buy</string>
    <string name="not_loged_in">You are not login</string>
    <string name="sell">Sell</string>
    <string name="email_otp_send">OTP code successfully send to your email Address</string>
    <string name="otp_header">Send OTP</string>
    <string name="email_otp_failed">Send email has failed</string>
    <string name="email_header">Email</string>
    <string name="wrong_email">Provided email is not validate</string>
    <string name="wrong_email_otp">Wrong email OTP</string>
    <string name="should_accept_terms">You should accept terms of use first</string>
    <string name="sign_up_failed">Failed to Sign Up</string>
    <string name="cant_set_password">Can\'t Set Password</string>
    <string name="passwrd_match_error">Password and Repeat Password does not match</string>
    <string name="weak_pass">Your Password is Weak</string>
    <string name="sign_google_in">Sign In with Google</string>
    <string name="pnl">pnl</string>
    <string name="bank_card">Bank Cards</string>
    <string name="convert">Convert</string>
    <string name="email_fake">po**@gmail.com</string>
    <string name="kyc_level_s">KYC Level:</string>
    <string name="uid">UID:</string>
    <string name="uid_fake">10043524143</string>
    <string name="basic_info">Basic Info</string>
    <string name="security_informations">Securities</string>
    <string name="whitelist">Whitelist</string>
    <string name="account_activity">Account Activity</string>
    <string name="log_out">Log Out</string>
    <string name="kyc_level">KYC Level</string>
    <string name="unverified">Unverified</string>
    <string name="max_withdraw_per_day">Max Withdraw per day:</string>
    <string name="withdraw_fake">1.000 BTC</string>
    <string name="vip_level">VIP Level</string>
    <string name="you_didnt_add_card">You didn\'t add any card bank yet.</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="see_details">See Details</string>
    <string name="securities">Securities</string>
    <string name="change">Change</string>
    <string name="help_protect_acc">Protect Your Account and Transactions</string>
    <string name="one_time_pass">One Time Password</string>
    <string name="google_auth">Google Authenticator</string>
    <string name="phne_numer">Phone Number</string>
    <string name="link_mobile_protect">Link mobile number to protect your account</string>
    <string name="mark">Mark</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="erc_network">ERC20</string>
    <string name="network">Network</string>
    <string name="address">Address</string>
    <string name="memo_slash_tag">Memo/Tag</string>
    <string name="whitelist_explain_toggle">Your account will only be able to withdraw to whitelisted withdrawal addresses.</string>
    <string name="device">Mobile/Android 10</string>
    <string name="action_enable_g2f">Enable G2F</string>
    <string name="ip_address">IP Address</string>
    <string name="ip_fake">121.131.128.65</string>
    <string name="region">Region</string>
    <string name="tehran_ir">Tehran, IR</string>
    <string name="time">Time</string>
    <string name="fake_time">2022/08/02 19:53</string>
    <string name="success">Success</string>
    <string name="device_alone">Device</string>
    <string name="wrong_password_login">Please enter password corectly</string>
    <string name="wrong_mobile">Mobile format is not correct</string>
    <string name="log_in_failed">Failed to Login</string>
    <string name="bank_example">Melli</string>
    <string name="iban_example">IR 06-0170-0000-0000-4321-1234-25</string>
</resources>