<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/login_register"
        android:icon="@drawable/ic_menu_register"
        android:title="@string/loginregister" />

    <item
        android:id="@+id/fragment_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/fragment_transaction"
        android:icon="@drawable/ic_menu_transaction"
        android:title="@string/transaction" />

    <item
        android:id="@+id/fragment_setting"
        android:icon="@drawable/ic_menu_setting"
        android:title="@string/setting" />

    <item
        android:id="@+id/fragment_feerules"
        android:icon="@drawable/ic_menu_feerules"
        android:title="@string/feerules" />

    <item
        android:id="@+id/fragment_referral"
        android:icon="@drawable/ic_menu_referral"
        android:title="@string/referral" />
    <item
        android:id="@+id/fragment_faq"
        android:icon="@drawable/ic_menu_faq"
        android:title="@string/faq" />

    <item
        android:id="@+id/fragment_announcement"
        android:icon="@drawable/ic_menu_announcement"
        android:title="@string/announcement" />

    <item
        android:id="@+id/fragment_notification"
        android:icon="@drawable/ic_menu_notification"
        android:title="@string/notification" />

    <item
        android:id="@+id/language"
        android:icon="@drawable/ic_menu_language"
        android:title="@string/language" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/logout" />



</menu>