<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_register_input1"
        android:text="@string/email"
        android:textSize="@dimen/hint_text_size" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_default_height"
        app:cardBackgroundColor="@color/mvp_bg_dark3"
        app:cardCornerRadius="@dimen/corner_radius_app_default">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_left_input"
                android:layout_marginEnd="@dimen/margin_left_input"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:textColor="@color/mvp_gray4"
                android:textColorHint="@color/mvp_gray4"
                android:textSize="@dimen/default_input_text_size" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_register_input1"
        android:text="@string/password"
        android:textSize="@dimen/hint_text_size" />
    

    <TextView
        android:id="@+id/txt_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/forget_password_question"
        android:textSize="@dimen/txt_clickable_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vtn_default_height"
        android:layout_marginTop="@dimen/top_margin_btn_register"
        android:text="@string/login"
        android:textSize="@dimen/btn_text_size" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_google"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vtn_default_height"
        android:layout_marginTop="@dimen/top_margin_btn_register"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/sign_google"
        android:textSize="@dimen/btn_text_size"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="@dimen/stroke_2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_member"
            android:textColor="@color/mvp_gray3"
            android:textSize="@dimen/size_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/size_14" />
    </LinearLayout>


</LinearLayout>