<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_marginStart="@dimen/margin_register_start"
    android:layout_marginEnd="@dimen/margin_register_end"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_wallebi"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/font_title_med"
        android:textColor="@color/mvp_gray4"
        android:layout_marginTop="@dimen/margin_top_60"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_user_desc"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/font_title_med"
        android:textColor="@color/mvp_gray3"
        android:layout_marginTop="@dimen/margin_40"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_contact"
        android:gravity="center"
        android:id="@+id/txt_tnx"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/font_title_med"
        android:textColor="@color/mvp_gray3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_label_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/mvp_gray4"
            android:textSize="12sp"
            android:visibility="visible" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        cardCornerRadius="@dimen/corner_radius_app_default"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:backgroundTint="@color/mvp_bg_dark3"
        android:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/txt_input_closed"
                android:layout_width="0dp"
                android:backgroundTint="@android:color/transparent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/input_inner_left"
                android:layout_marginEnd="@dimen/input_inner_left"
                android:layout_weight="1"
                android:hint="@string/hint"
                android:inputType="number"
                android:padding="0dp"
                android:textColor="@color/mvp_gray4"
                android:textSize="12sp" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txt_error_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email Format Is Incorrect!"
        android:textColor="@color/mvp_red"
        android:textSize="@dimen/input_error_size"
        android:visibility="gone" />





    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_closed"
        android:layout_marginTop="@dimen/margin_top_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vtn_default_height"
        android:text="@string/done"
        android:textColor="?attr/backgroundDef"
        android:textSize="@dimen/btn_text_size" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_security_unavailable"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_member"
            android:textColor="@color/mvp_gray2"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/txt_btn_login_closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_word_Start"
            android:text="@string/login"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/size_14" />
    </LinearLayout>


</LinearLayout>